<!-- Global Entities to reference --><!DOCTYPE resources [<!ENTITY appname "My Biz Cal">]>


<resources>
    <!-- GENERAL PURPOSE STRINGS -->
    <string name="app_name">&appname;</string>


    <!-- TITLE SCREEN STRINGS -->
    <string name="welcome_title">WELCOME TO \n&appname;</string>
    <string name="create_account_title">CREATE NEW ACCOUNT</string>
    <string name="login_title">LOG IN</string>
    <string name="landing_title">WELCOME</string>
    <string name="add_new_title">ADD NEW</string>
    <string name="appointment_title">APPOINTMENT</string>
    <string name="select_view_title">SELECT VIEW</string>
    <string name="monthly_view_title">MONTHLY VIEW</string>
    <string name="weekly_view_title">WEEKLY VIEW</string>
    <string name="daily_view_title">DAILY VIEW</string>


    <!-- LABEL STRINGS -->
    <string name="email_label_required">E-MAIL *:</string>
    <string name="password_label_required">PASSWORD *:</string>
    <string name="email_label">E-MAIL:</string>
    <string name="password_label">PASSWORD:</string>
    <string name="display_name_label">DISPLAY NAME *:</string>
    <string name="phone_label">PHONE:</string>
    <string name="time_zone_label">TIME ZONE *:</string>
    <string name="time_1224H_label">12 / 24 H *:</string>
    <string name="date_label">DATE*:</string>
    <string name="all_day_label">ALL DAY?:</string>
    <string name="start_time_label">START TIME*:</string>
    <string name="end_time_label">END TIME*:</string>
    <string name="title_label">TITLE*:</string>
    <string name="description_label">DESCRIPTION:</string>
    <string name="location_label">LOCATION:</string>
    <string name="attendees_label">ATTENDEES:</string>
    <string name="recurrence_label">RECURRENCE:</string>
    <string name="reminder_label">REMINDER:</string>
    <string name="month_with_label">MONTH WITH:</string>
    <string name="week_of_label">WEEK OF:</string>
    <string name="calendar_date_label">CALENDAR DATE:</string>


    <!-- MESSAGES STRINGS -->
    <string name="password_requirements_text">Password must be a minimum of 14 characters with at least 1 capital letter and 1 number</string>
    <string name="required_text">* = Required</string>


    <!-- HINT STRINGS -->
    <string name="password_hint">Enter Password</string>
    <string name="display_name_hint">Enter Display Name</string>
    <string name="email_hint">Enter E-Mail</string>
    <string name="phone_hint">Enter Phone</string>
    <string name="date_hint">Enter Date</string>
    <string name="start_time_hint">Enter Start Time</string>
    <string name="end_time_hint">Enter End Time</string>
    <string name="title_hint">Enter Title</string>
    <string name="description_hint">Enter Description</string>
    <string name="location_hint">Enter Location</string>
    <string name="attendees_hint">Enter Attendees</string>


    <!-- BUTTON STRINGS -->
    <string name="create_account_button">Create New Account</string>
    <string name="login_button">Login</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="schedule_button">Schedule</string>
    <string name="tasks_button">Tasks</string>
    <string name="goals_button">Goals</string>
    <string name="add_new_button">Add New</string>
    <string name="view_button">Select View</string>
    <string name="search_button">Search</string>
    <string name="settings_button">Settings</string>
    <string name="logout_button">Logout</string>
    <string name="add_new_appointment_button">Add New Appointment</string>
    <string name="add_new_task_button">Add New Task</string>
    <string name="add_new_goal_button">Add New Goal</string>
    <string name="join_group_button">Join Group</string>
    <string name="create_group_button">Create Group</string>
    <string name="monthly_view_button">Monthly View</string>
    <string name="weekly_view_button">Weekly View</string>
    <string name="daily_view_button">Daily View</string>
    <string name="return_button">Return</string>
    <string name="add_button">Add</string>


    <!-- PERSISTENCE REFERENCE STRINGS -->
    <string name="user_shared_preferences">cs246.businesscalendar.user_shared_preferences</string>
    <string name="shared_preferences_email">email</string>
    <string name="shared_preferences_displayName">display_name</string>
    <string name="shared_preferences_phone">phone</string>
    <string name="shared_preferences_time_zone_offset">time_zone_offset</string>
    <string name="shared_preferences_is24H">is24H</string>
    <string name="internal_storage_appointments_filename">appointments</string>


    <!-- STRING ARRAYS -->
    <string-array name="time_zone">
        <item>Greenwich Mean (GMT + 0)</item>
        <item>Universal Coordinated (GMT + 0)</item>
        <item>European Central (GMT + 1)</item>
        <item>Eastern European (GMT + 2)</item>
        <item>(Arabic) Egypt Standard (GMT + 2)</item>
        <item>Eastern African (GMT + 3)</item>
        <item>Near East (GMT + 4)</item>
        <item>Pakistan Lahore (GMT + 5)</item>
        <item>Bangladesh Standard (GMT + 6)</item>
        <item>Vietnam Standard (GMT + 7)</item>
        <item>China Taiwan (GMT + 8)</item>
        <item>Japan Standard (GMT + 9)</item>
        <item>Australia Eastern (GMT + 10)</item>
        <item>Solomon Standard (GMT + 11)</item>
        <item>New Zealand Standard (GMT + 12)</item>
        <item>Midway Islands (GMT - 11)</item>
        <item>Hawaii Standard (GMT - 10)</item>
        <item>Alaska Standard (GMT - 9)</item>
        <item>Pacific Standard (GMT - 8)</item>
        <item>Phoenix Standard (GMT - 7)</item>
        <item>Mountain Standard (GMT - 7)</item>
        <item>Central Standard (GMT - 6)</item>
        <item>Eastern Standard (GMT - 5)</item>
        <item>Indiana Eastern Standard (GMT - 5)</item>
        <item>Puerto Rico/US Virgin Islands (GMT - 4)</item>
        <item>Argentina Standard (GMT - 3)</item>
        <item>Brazil Eastern (GMT - 3)</item>
        <item>Central African (GMT - 1)</item>
    </string-array>
    <string-array name="time_1224">
        <item>12H</item>
        <item>24H</item>
    </string-array>
</resources>
