<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Landing">

    <TextView
        android:id="@+id/landingTitle"
        android:text="@string/landing_title"
        android:textSize="@dimen/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/landingScheduleButton"
        android:text="@string/schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@+id/landingTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/landingTasksButton"
        android:text="@string/tasks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/landingTitle"
        app:layout_constraintStart_toStartOf="@+id/landingScheduleButton"
        app:layout_constraintEnd_toEndOf="@+id/landingGoalsButton"
        />

    <Button
        android:id="@+id/landingGoalsButton"
        android:text="@string/goals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@+id/landingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/createaccountConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/confirm_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</android.support.constraint.ConstraintLayout>