<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_presenter.modify_appointment.ModifyAppointment">

    <TextView
        android:id="@+id/appointmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/appointment_title"
        android:textSize="@dimen/screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/general_margin"
        android:background="@drawable/general_border"
        app:layout_constraintBottom_toTopOf="@+id/appointmentConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentTitle"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appointmentDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/date_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/appointmentDateEdit"
                tools:ignore="Autofill"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                app:layout_constraintBaseline_toBaselineOf="@+id/appointmentDateLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/appointmentAllDayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/all_day_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appointmentDateEdit" />

            <TextView
                android:id="@+id/appointmentStartTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/start_time_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentAllDayCheckbox" />

            <EditText
                android:id="@+id/appointmentStartTimeEdit"
                tools:ignore="Autofill"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/start_time_hint"
                android:inputType="time"
                app:layout_constraintBaseline_toBaselineOf="@+id/appointmentStartTimeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/appointmentEndTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/end_time_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentStartTimeLabel" />

            <EditText
                android:id="@+id/appointmentEndTimeEdit"
                tools:ignore="Autofill"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/end_time_hint"
                android:inputType="time"
                app:layout_constraintBaseline_toBaselineOf="@+id/appointmentEndTimeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/appointmentTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/title_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentEndTimeLabel" />

            <EditText
                android:id="@+id/appointmentTitleEdit"
                tools:ignore="Autofill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/title_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentTitleLabel" />

            <TextView
                android:id="@+id/appointmentDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/description_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentTitleEdit" />

            <EditText
                android:id="@+id/appointmentDescriptionEdit"
                tools:ignore="Autofill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentDescriptionLabel" />

            <TextView
                android:id="@+id/appointmentLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/location_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentDescriptionEdit" />

            <EditText
                android:id="@+id/appointmentLocationEdit"
                tools:ignore="Autofill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/location_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentLocationLabel" />

            <TextView
                android:id="@+id/appointmentAttendeesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/attendees_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentLocationEdit" />

            <EditText
                android:id="@+id/appointmentAttendeesEdit"
                tools:ignore="Autofill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/attendees_hint"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentAttendeesLabel" />

            <TextView
                android:id="@+id/appointmentRecurrenceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/recurrence_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentAttendeesEdit" />

            <Spinner
                android:id="@+id/appointmentRecurrenceSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:layout_marginEnd="@dimen/general_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appointmentRecurrenceLabel"
                app:layout_constraintTop_toBottomOf="@+id/appointmentAttendeesEdit" />

            <TextView
                android:id="@+id/appointmentReminderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:text="@string/reminder_label"
                android:textSize="@dimen/label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointmentRecurrenceLabel" />

            <Spinner
                android:id="@+id/appointmentReminderSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginTop="@dimen/general_margin"
                android:layout_marginEnd="@dimen/general_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appointmentReminderLabel"
                app:layout_constraintTop_toBottomOf="@+id/appointmentRecurrenceLabel" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/appointmentConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginBottom="@dimen/general_margin"
        android:text="@string/confirm_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/appointmentCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/appointmentCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginBottom="@dimen/general_margin"
        android:text="@string/cancel_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>